[package]
name = "reso_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
reso-client = "0.2.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = "0.3"

[lib]
name = "reso_examples"
path = "src/lib.rs"

[[example]]
name = "fetch_metadata"
path = "examples/fetch_metadata.rs"

[[example]]
name = "query_properties"
path = "examples/query_properties.rs"

[[example]]
name = "axum_property_search"
path = "examples/axum_property_search.rs"

[[example]]
name = "advanced_queries"
path = "examples/advanced_queries.rs"

[[example]]
name = "replication_sync"
path = "examples/replication_sync.rs"
